# SkillMap

./: .gitignore  README.md  index.html  netlify.toml  package-lock.json  package.json  vite.config.ts
.github/workflows/: geopulse-lab.yml
docs/: flagship-geospatial-roadmap.md
labs/geopulse/: .env.example  README.md  compose.yaml
labs/geopulse/api/: Dockerfile  pyproject.toml
labs/geopulse/api/app/: __init__.py  database.py  logging_config.py  main.py  schemas.py  settings.py  spatial.py
labs/geopulse/api/app/routers/: features.py
labs/geopulse/api/tests/: test_bbox.py  test_health.py
public/: manifest.webmanifest  sw.js
src/: App.tsx  main.tsx  store.test.tsx  store.tsx  styles.css  types.ts
src/components/: BookCover.tsx  BookReader.tsx  Books.tsx  CodeBlock.tsx  Dashboard.tsx  Exercises.tsx  Flashcards.test.tsx  Flashcards.tsx  GoogleBookViewer.tsx  LessonReader.tsx  ModuleView.tsx  Playground.tsx  ProjectAssessment.tsx  Quiz.test.tsx  Quiz.tsx  Reference.tsx  RichHtml.tsx  Search.tsx  Sidebar.tsx  TopBar.tsx  Topo.tsx
src/data/: arabic.json  backend.json  content.test.ts  courses.ts  cybersecurity.json  english.json  finance.json  frontend.json  git.json  prompting.json  russian.json  telegram.json  webgis-enhancements.ts  webgis-flagship.ts  webgis-foundations.ts  webgis-modern.ts  webgis-professional.test.ts  webgis.json
src/lib/: assessment.test.ts  assessment.ts  backup.test.ts  backup.ts  books.test.ts  books.ts  content.ts  highlight.ts  lesson.test.ts  lesson.ts  migrate.test.ts  migrate.ts  pwa.ts  router.test.ts  router.ts  speech.ts  (+5 more)
(+20 files in other folders)
